[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
serde = { version = "1", features = ["derive"] }
chrono = "0.4.19"
thiserror = "1"
bincode = "1.3.3"
rust-crypto = "0.2.36"
bigint = "4.4.3"
sled = "0.32"
libp2p = {version="0.46",features=["tcp-tokio"]}
tokio = { version = "1.19",features = ["full"]}
futures="0.3.1"